--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <section class="nama">
     <h2>Achmad Zulfi Zamiri</h2>
-      <a href="Website/index.html"><h3>Tentang Saya</h3></a>
+      <a href="Website/index.html"><h3>About Me</h3></a>
   </section>   
 </body>
 </html>
